chore(tree-view): updates

--- a/src/patternfly/components/TreeView/tree-view.scss
+++ b/src/patternfly/components/TreeView/tree-view.scss
@@ -7,6 +7,10 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   --#{$tree-view}__node--indent--base: calc(var(--pf-t--global--spacer--md) * 2 + var(--#{$tree-view}__node-toggle-icon--MinWidth)); // based off of the expected width of the toggle button
   --#{$tree-view}__node--nested-indent--base: calc(var(--#{$tree-view}__node--indent--base) - var(--pf-t--global--spacer--md)); // nested spacing that removes the toggle button's left padding, so the icon aligns with text on the node above it
 
+  // Content
+  --#{$tree-view}__content--BorderRadius: var(--pf-t--global--border--radius--small);
+  --#{$tree-view}__content--PaddingInlineEnd: var(--pf-t--global--spacer--sm);
+
   // Node
   --#{$tree-view}__node--PaddingTop: var(--pf-t--global--spacer--sm);
   --#{$tree-view}__node--PaddingRight: var(--pf-t--global--spacer--sm);
@@ -14,7 +18,6 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   --#{$tree-view}__node--PaddingLeft: var(--#{$tree-view}__node--indent--base);
   --#{$tree-view}__node--Color: var(--pf-t--global--text--color--subtle);
   --#{$tree-view}__node--BackgroundColor: transparent;
-  --#{$tree-view}__node--BorderRadius: var(--pf-t--global--border--radius--small);
   --#{$tree-view}__node--m-current--Color: var(--pf-t--global--text--color--regular);
   --#{$tree-view}__node--m-current--BackgroundColor: var(--pf-t--global--background--color--primary--clicked);
   --#{$tree-view}__node--hover--BackgroundColor: var(--pf-t--global--background--color--primary--hover);
@@ -22,7 +25,7 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   // Container
   --#{$tree-view}__node-container--Display: contents;
 
-  // Content
+  // Node content
   --#{$tree-view}__node-content--RowGap: var(--pf-t--global--spacer--sm);
   --#{$tree-view}__node-content--Overflow: visible;
 
@@ -41,12 +44,12 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   // Toggle icon
   --#{$tree-view}__node-toggle-icon--MinWidth: var(--pf-t--global--icon--size--body--default);
   --#{$tree-view}__node-toggle-icon--MinWidth: var(--pf-t--global--icon--size--body--default);
-  --#{$tree-view}__node-toggle-button--PaddingTop: var(--pf-t--global--spacer--sm);
-  --#{$tree-view}__node-toggle-button--PaddingRight: var(--pf-t--global--spacer--md);
-  --#{$tree-view}__node-toggle-button--PaddingBottom: var(--pf-t--global--spacer--sm);
-  --#{$tree-view}__node-toggle-button--PaddingLeft: var(--pf-t--global--spacer--md);
-  --#{$tree-view}__node-toggle-button--MarginTop: calc(var(--#{$tree-view}__node-toggle-button--PaddingTop) * -1);
-  --#{$tree-view}__node-toggle-button--MarginBottom: calc(var(--#{$tree-view}__node-toggle-button--PaddingTop) * -1);
+  --#{$tree-view}__node-toggle--PaddingTop: var(--pf-t--global--spacer--sm);
+  --#{$tree-view}__node-toggle--PaddingRight: var(--pf-t--global--spacer--md);
+  --#{$tree-view}__node-toggle--PaddingBottom: var(--pf-t--global--spacer--sm);
+  --#{$tree-view}__node-toggle--PaddingLeft: var(--pf-t--global--spacer--md);
+  --#{$tree-view}__node-toggle--MarginTop: calc(var(--#{$tree-view}__node-toggle--PaddingTop) * -1);
+  --#{$tree-view}__node-toggle--MarginBottom: calc(var(--#{$tree-view}__node-toggle--PaddingTop) * -1);
 
   // Check
   --#{$tree-view}__node-check--MarginRight: var(--pf-t--global--spacer--sm);
@@ -112,6 +115,7 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   --#{$tree-view}--m-compact--border--Left: var(--#{$tree-view}--m-compact--base-border--Left);
 
   // Node
+  --#{$tree-view}--m-compact__node--Color: var(--pf-t--global--text--color--regular);
   --#{$tree-view}--m-compact__node--PaddingTop: 0;
   --#{$tree-view}--m-compact__node--PaddingBottom: 0;
   --#{$tree-view}--m-compact__node--nested--PaddingTop: var(--pf-t--global--spacer--sm);
@@ -125,8 +129,8 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   --#{$tree-view}--m-compact__list-item--BorderBottomColor: var(--pf-t--global--border--color--default);
   --#{$tree-view}--m-compact__list-item--before--Top: 0;
   --#{$tree-view}--m-compact__list-item--last-child--before--Height: var(--#{$tree-view}--m-compact__node--before--Top);
-  --#{$tree-view}--m-compact__list-item--nested--before--Top: calc(var(--#{$tree-view}__node--PaddingTop) * -1);
-  --#{$tree-view}--m-compact__list-item--nested--last-child--before--Height: calc(var(--#{$tree-view}--m-compact__node--before--Top) + var(--#{$tree-view}__node--PaddingTop));
+  --#{$tree-view}--m-compact__list-item--nested--before--Top: calc(var(--#{$tree-view}--m-compact__node--nested--PaddingTop) * -1);
+  --#{$tree-view}--m-compact__list-item--nested--last-child--before--Height: calc(var(--#{$tree-view}--m-compact__node--before--Top) + var(--#{$tree-view}--m-compact__node--nested--PaddingTop));
 
   // Node
   --#{$tree-view}--m-compact__node--PaddingLeft: var(--#{$tree-view}--m-compact__node--indent--base);
@@ -134,8 +138,8 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   --#{$tree-view}--m-compact__node--level-2--PaddingLeft: var(--#{$tree-view}--m-compact__node--indent--base);
 
   // Node toggle
-  --#{$tree-view}--m-compact__node-toggle--nested--MarginRight: calc(var(--#{$tree-view}__node-toggle-button--PaddingLeft) * -.5);
-  --#{$tree-view}--m-compact__node-toggle--nested--MarginLeft: calc(var(--#{$tree-view}__node-toggle-button--PaddingLeft) * -1.5);
+  --#{$tree-view}--m-compact__node-toggle--nested--MarginRight: calc(var(--#{$tree-view}__node-toggle--PaddingLeft) * -.5);
+  --#{$tree-view}--m-compact__node-toggle--nested--MarginLeft: calc(var(--#{$tree-view}__node-toggle--PaddingLeft) * -1.5);
 
   // Node container
   --#{$tree-view}--m-compact__node-container--Display: flex;
@@ -144,6 +148,7 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   --#{$tree-view}--m-compact__node-container--PaddingRight: var(--pf-t--global--spacer--lg);
   --#{$tree-view}--m-compact__node-container--PaddingBottom: var(--#{$tree-view}--m-compact__node-container--PaddingBottom--base);
   --#{$tree-view}--m-compact__node-container--PaddingLeft: var(--pf-t--global--spacer--xs);
+  --#{$tree-view}--m-compact__node-container--BorderRadius: var(--pf-t--global--border--radius--small);
   --#{$tree-view}--m-compact__node-container--nested--PaddingTop: var(--pf-t--global--spacer--md);
   --#{$tree-view}--m-compact__node-container--nested--PaddingRight: var(--pf-t--global--spacer--lg);
   --#{$tree-view}--m-compact__node-container--nested--PaddingBottom: var(--pf-t--global--spacer--md);
@@ -214,11 +219,11 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   }
 
   &.pf-m-compact {
+    --#{$tree-view}__node--Color: var(--#{$tree-view}--m-compact__node--Color);
     --#{$tree-view}__node--PaddingTop: var(--#{$tree-view}--m-compact__node--PaddingTop);
     --#{$tree-view}__node--PaddingBottom: var(--#{$tree-view}--m-compact__node--PaddingBottom);
     --#{$tree-view}__node-container--Display: var(--#{$tree-view}--m-compact__node-container--Display);
     --#{$tree-view}__node--hover--BackgroundColor: transparent;
-    --#{$tree-view}__node--focus--BackgroundColor: transparent;
     --#{$tree-view}__list-item__list-item__node-toggle--Top: var(--#{$tree-view}--m-compact__list-item__list-item__node-toggle--Top);
 
     // Level 1
@@ -363,11 +368,9 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   padding-inline-end: var(--#{$tree-view}__node--PaddingRight);
   color: var(--#{$tree-view}__node--Color);
   background-color: var(--#{$tree-view}__node--BackgroundColor);
-  border-radius: var(--#{$tree-view}__node--BorderRadius);
 
   &.pf-m-current {
     --#{$tree-view}__node--Color: var(--#{$tree-view}__node--m-current--Color);
-    --#{$tree-view}__node--BackgroundColor: var(--#{$tree-view}__node--m-current--BackgroundColor);
   }
 
   .#{$tree-view}__node-count {
@@ -378,6 +381,7 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
 .#{$tree-view}__node-container {
   display: var(--#{$tree-view}__node-container--Display);
   flex-grow: 1;
+  border-radius: var(--#{$tree-view}--m-compact__node-container--BorderRadius);
 }
 
 .#{$tree-view}__node-content {
@@ -395,6 +399,7 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   margin-inline-end: var(--#{$tree-view}__node-check--MarginRight);
 }
 
+// TODO - should this use the button component? It isn't always a <button> element, but should have the same layout whether it's a button or not
 .#{$tree-view}__node-toggle {
   position: var(--#{$tree-view}__node-toggle--Position);
   inset-block-start: var(--#{$tree-view}__list-item__list-item__node-toggle--Top);
@@ -402,12 +407,12 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  padding-block-start: var(--#{$tree-view}__node-toggle-button--PaddingTop);
-  padding-block-end: var(--#{$tree-view}__node-toggle-button--PaddingBottom);
-  padding-inline-start: var(--#{$tree-view}__node-toggle-button--PaddingLeft);
-  padding-inline-end: var(--#{$tree-view}__node-toggle-button--PaddingRight);
-  margin-block-start: var(--#{$tree-view}__node-toggle-button--MarginTop);
-  margin-block-end: var(--#{$tree-view}__node-toggle-button--MarginBottom);
+  padding-block-start: var(--#{$tree-view}__node-toggle--PaddingTop);
+  padding-block-end: var(--#{$tree-view}__node-toggle--PaddingBottom);
+  padding-inline-start: var(--#{$tree-view}__node-toggle--PaddingLeft);
+  padding-inline-end: var(--#{$tree-view}__node-toggle--PaddingRight);
+  margin-block-start: var(--#{$tree-view}__node-toggle--MarginTop);
+  margin-block-end: var(--#{$tree-view}__node-toggle--MarginBottom);
   color: var(--#{$tree-view}__node-toggle--Color);
   background-color: var(--#{$tree-view}__node-toggle--BackgroundColor);
   border: 0;
@@ -465,6 +470,9 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
 .#{$tree-view}__content {
   display: flex;
   align-items: center;
+  padding-inline-end: var(--#{$tree-view}__content--PaddingInlineEnd);
+  background-color: var(--#{$tree-view}__content--BackgroundColor);
+  border-radius: var(--#{$tree-view}__content--BorderRadius);
 }
 
 .#{$tree-view}__content:hover,
@@ -472,8 +480,9 @@ $pf-v5-c-tree-view--MaxNesting: 10 !default;
   background-color: var(--#{$tree-view}__node--hover--BackgroundColor);
 }
 
-.#{$tree-view}__action {
-  margin-inline-start: var(--#{$tree-view}__action--MarginLeft);
+// TODO - make sure we can use :has(), maybe move pf-m-current modifier to __content
+.#{$tree-view}__content:has(> .#{$tree-view}__node.pf-m-current) {
+  --#{$tree-view}__content--BackgroundColor: var(--#{$tree-view}__node--m-current--BackgroundColor);
 }
 
 // stylelint-disable no-duplicate-selectors
